Refactor code structure for improved readability and maintainability

--- a/index.html
+++ b/index.html
@@ -11,7 +11,85 @@
 </head>
 
 <body>
-  <h1 class="text-red-800 text-center text-5xl">Hello World</h1>
+  <!-- REWARDS SECTION  -->
+  <section id="rewards" class="my-6 md:my-10 lg:my-15 text-center">
+        <div class="flex flex-col items-center px-4">
+            <p class="text-base md:text-lg leading-8 text-[#121212] max-w-3xl">Rewards</p>
+            <h2 class="font-bold text-2xl md:text-3xl lg:text-4xl text-[#121212] max-w-xl mt-2 leading-tight sm:leading-snug lg:leading-normal">Exciting Rewards for Every Celebration</h2>
+            <p class="text-base md:text-lg text-[#4F4F4F] max-w-3xl mt-4">Experience the joy of celebrating life's milestones with our monthly rewards. From birthdays to anniversaries, we have something special for everyone.</p>
+        </div>
+        <div class="max-w-7xl mx-auto px-4">
+            <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-6 sm:gap-8 p-6 sm:p-10 lg:p-16">
+                <div class="w-full max-w-[400px] mx-auto rounded-xl border border-[#E7E7E7] flex flex-col text-center min-h-[400px] sm:min-h-[450px]">
+                    <img src="/assets/reward-img-1.jpg" alt="Birthday Show" class="w-full h-[200px] sm:h-[249px] object-cover rounded-t-xl">
+                    <div class="flex flex-col flex-grow justify-between p-6">
+                        <h2 class="font-semibold text-xl sm:text-2xl text-[#121212] mb-4">Join Our Birthday Month Reality Show!</h2>
+                        <p class="text-base sm:text-lg">Participate in fun game shows and win prizes!</p>
+                    </div>
+                </div>
+                <div class="w-full max-w-[400px] mx-auto rounded-xl border border-[#E7E7E7] flex flex-col text-center min-h-[400px] sm:min-h-[450px]">
+                    <img src="/assets/reward-img-2.jpg" alt="Tiered Rewards" class="w-full h-[200px] sm:h-[249px] object-cover rounded-t-xl">
+                    <div class="flex flex-col flex-grow justify-between p-6">
+                        <h2 class="font-semibold text-xl sm:text-2xl text-[#121212] mb-4">Tiered Rewards for Long-Term Subscribers</h2>
+                        <p class="text-base sm:text-lg">The longer you stay, the more you earn!</p>
+                    </div>
+                </div>
+                <div class="w-full max-w-[400px] mx-auto rounded-xl border border-[#E7E7E7] flex flex-col text-center min-h-[400px] sm:min-h-[450px]">
+                    <img src="/assets/reward-img-3.jpg" alt="Celebrate More" class="w-full h-[200px] sm:h-[249px] object-cover rounded-t-xl">
+                    <div class="flex flex-col flex-grow justify-between p-6">
+                        <h2 class="font-semibold text-xl sm:text-2xl text-[#121212] mb-4">Celebrate More, Earn More!</h2>
+                        <p class="text-base sm:text-lg">Unlock exclusive rewards with each celebration.</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="flex justify-center gap-4 mt-6">
+            <a href="#" class="bg-[#FC9A04] text-white text-sm sm:text-base font-semibold rounded-full px-6 py-3 hover:bg-[#E58903] transition">Join Us</a>
+            <a href="#" class="bg-white text-[#DF7200] text-sm sm:text-base font-semibold rounded-full px-6 py-3 border-2 border-[#DF7200] hover:bg-[#DF7200] hover:text-white transition">Learn More</a>
+        </div>
+    </section>
+
+    <!-- CELEBRATE SECTION  -->
+
+    <section id="celebrate" class="py-8 p-4 sm:p-10 lg:p-16">
+        <div class="grid grid-cols-1 md:grid-cols-2 mb-0 sm:mb-[67px] max-w-full px-2 gap-0 sm:gap-5">
+            <div class="flex flex-col gap-4 sm:gap-6">
+                <p class="text-lg text-[#121212]">Celebrate</p>
+                <h2 class="w-full max-w-[525px] h-[116px] font-bold text-2xl sm:text-3xl lg:text-[40px] text-[#121212]">How Our Reward System Works</h2>
+            </div>
+            <div>
+                <p class="text-lg text-[#4F4F4F] pt-0 pb-6 sm:pb-0 sm:pt-16">Joining our program is easy and rewarding. Simply subscribe to our monthly plan, and you’re on your way to celebrating life’s milestones. Enjoy exclusive rewards and the chance to participate in exciting game shows!</p>
+            </div>
+        </div>
+
+        <div class="max-w-full px-2">
+            <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-2 sm:gap-6 mb-8 sm:mb-[67px]">
+                <div class="w-full max-w-[400px] mx-auto rounded-xl flex flex-col gap-2 sm:gap-4 min-h-[300px] sm:min-h-[400px]">
+                    <img src="/assets/celebrate-img-1.jpg" alt="" class="w-full h-[200px] sm:h-[200px] object-cover rounded-xl">
+                    <div class="flex flex-col flex-grow gap-4 sm:gap-6">
+                        <h2 class="font-semibold text-lg sm:text-xl lg:text-2xl text-[#121212]">Step 1: Subscribe to Our Monthly Plan</h2>
+                        <p class="text-lg text-[#4F4F4F]">Start your journey by signing up today!</p>
+                    </div>
+                </div>
+                <div class="w-full max-w-[400px] mx-auto rounded-xl flex flex-col gap-2 sm:gap-4 min-h-[300px] sm:min-h-[400px]">
+                    <img src="/assets/celebrate-img-2.jpg" alt="" class="w-full h-[200px] sm:h-[200px] object-cover rounded-xl">
+                    <div class="flex flex-col flex-grow gap-4 sm:gap-6">
+                        <h2 class="font-semibold text-lg sm:text-xl lg:text-2xl text-[#121212]">Step 2: Submit Proof of Celebration</h2>
+                        <p class="text-lg text-[#4F4F4F]">Share your special moments with us.</p>
+                    </div>
+                </div>
+                <div class="w-full max-w-[400px] mx-auto rounded-xl flex flex-col gap-2 sm:gap-4 min-h-[300px] sm:min-h-[400px]">
+                    <img src="/assets/celebrate-img-3.jpg" alt="" class="w-full h-[200px] sm:h-[200px] object-cover rounded-xl">
+                    <div class="flex flex-col flex-grow gap-4 sm:gap-6">
+                        <h2 class="font-semibold text-lg sm:text-xl lg:text-2xl text-[#121212]">Step 3: Claim Rewards or Join Game Show</h2>
+                        <p class="text-lg text-[#4F4F4F]">Enjoy rewards or join the fun!</p>
+                    </div>
+                </div>
+            </div>
+            <a href="#" class="bg-[#FC9A04] text-white text-sm sm:text-base font-semibold rounded-full px-6 py-3 hover:bg-[#E58903] transition">Join Us</a>
+        </div>
+    </section>
+
 </body>
 
 </html>
