--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
       <p class="text-base md:text-lg text-[#4F4F4F] max-w-3xl mt-4">Experience the joy of celebrating life's milestones
         with our monthly rewards. From birthdays to anniversaries, we have something special for everyone.</p>
     </div>
-    <div class="max-w-7xl mx-auto px-4">
-      <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-6 sm:gap-8 p-6 sm:p-10 lg:p-16">
+    <div class="max-w-full px-4">
+      <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-2 sm:gap-6 mb-8 sm:mb-[67px]">
         <div
           class="w-full max-w-[400px] mx-auto rounded-xl border border-[#E7E7E7] flex flex-col text-center min-h-[400px] sm:min-h-[450px]">
           <img src="/assets/reward-img-1.jpg" alt="Birthday Show"
@@ -115,6 +115,83 @@
     </div>
   </section>
 
+  <!-- CONTACT US SECTION  -->
+
+  <section class="py-6 p-2 sm:p-8 lg:p-14">
+    <div
+  class="flex flex-col md:flex-row gap-4 sm:gap-8 lg:gap-16 bg-[#F6F6F6] p-4 sm:p-6 lg:p-8 rounded-xl max-w-7xl mx-auto relative z-20">
+      <div class="w-full max-w-[500px] h-[440px] sm:max-w-[653px] sm:h-[544px]">
+        <img src="/assets/contact-us-img.png" alt="Contact Us Illustration"
+          class="w-[500px] h-[400px] sm:w[653px] sm:h-[500px] object-cover rounded-xl">
+      </div>
+      <div class="w-full max-w-[600px]">
+        <h2 class="font-bold text-2xl sm:text-3xl lg:text-[40px] text-[#121212] pb-4">Contact Us</h2>
+        <p class="text-base sm:text-lg text-[#4F4F4F] pb-6">Let’s Bring Your Celebration to Life!</p>
+
+        <form action="" class="flex flex-col gap-2">
+          <div class="flex flex-col gap-1">
+            <label for="name" class="text-sm sm:text-base font-medium text-[#121212]">Name</label>
+            <input type="text" id="name" placeholder="Your name here"
+              class="w-full p-3 text-base border border-[#E7E7E7] rounded-lg focus:outline-none focus:ring-2 focus:ring-[#FC9A04]">
+          </div>
+          <div class="flex flex-col gap-2">
+            <label for="email" class="text-sm sm:text-base font-medium text-[#121212]">Email</label>
+            <input type="email" id="email" placeholder="email@gmail.com"
+              class="w-full p-3 text-base border border-[#E7E7E7] rounded-lg focus:outline-none focus:ring-2 focus:ring-[#FC9A04]">
+          </div>
+          <div class="flex flex-col gap-2">
+            <label for="message" class="text-sm sm:text-base font-medium text-[#121212]">Message</label>
+            <textarea id="message" placeholder="Your message here" rows="4"
+              class="w-full p-3 text-base border border-[#E7E7E7] rounded-lg focus:outline-none focus:ring-2 focus:ring-[#FC9A04]"></textarea>
+          </div>
+          <button type="submit"
+            class="bg-[#FC9A04] text-white text-sm sm:text-base font-semibold rounded-full px-6 py-3 mt-2 hover:bg-[#E58903] transition w-[160px]">Send
+            Message
+          </button>
+        </form>
+      </div>
+    </div>
+  </section>
+
+  <!-- FOOTER SECTION  -->
+  <footer class="bg-[#121212] text-[#FFFFFF] h-[740px] -mt-50">
+    <div class="flex flex-col md:flex-row justify-between px-4 sm:px-8 lg:px-16 pt-60">
+      <div class="w-[340px] sm:w-[400px] flex flex-col gap-8">
+        <img src="assets/Logo.png" alt="" class="w-[50px]">
+        <p>Subscribe to our newsletter for the latest updates on features and offerings.</p>
+
+        <form action="">
+           <div class="flex flex-col gap-2">
+            <label for="email" class="text-sm sm:text-base font-medium text-[#FFFFFF]">Email</label>
+            <input type="email" id="email" placeholder="email@gmail.com"
+              class="w-full p-3 text-base border border-[#E7E7E7] rounded-lg focus:outline-none focus:ring-2 focus:ring-[#FC9A04]">
+          </div>
+          <button type="submit"
+            class="bg-[#FC9A04] text-white text-sm sm:text-base font-semibold rounded-full px-6 py-3 mt-6 hover:bg-[#E58903] transition">Join
+            Us
+          </button>
+        </form>
+      </div>
+
+      <div class="w-[300px]">
+        <div class="flex justify-between pt-10">
+          <ul class="leading-10">
+            <li class="text-[#FC9A04] text-lg font-medium">Quick Links</li>
+            <li><a href="">About Us</a></li>
+            <li><a href="">Shoutouts</a></li>
+            <li><a href="">Contact Us</a></li>
+          </ul>
+          <ul class="leading-10">
+            <li class="text-[#FC9A04] text-lg font-medium">Stay Connected</li>
+            <li><a href="">Facebook</a></li>
+            <li><a href="">Linkedln</a></li>
+            <li><a href="">x</a></li>
+          </ul>
+        </div>
+
+      </div>
+    </div>
+  </footer>
 </body>
 
 </html>
