--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
 
   <section class="py-6 p-2 sm:p-8 lg:p-14">
     <div
-  class="flex flex-col md:flex-row gap-4 sm:gap-8 lg:gap-16 bg-[#F6F6F6] p-4 sm:p-6 lg:p-8 rounded-xl max-w-7xl mx-auto relative z-20">
+      class="flex flex-col md:flex-row gap-4 sm:gap-8 lg:gap-16 bg-[#F6F6F6] p-4 sm:p-6 lg:p-8 rounded-xl max-w-7xl mx-auto relative z-20">
       <div class="w-full max-w-[500px] h-[440px] sm:max-w-[653px] sm:h-[554px]">
         <img src="/assets/contact-us-img.png" alt="Contact Us Illustration"
           class="w-[500px] h-[400px] sm:w[653px] sm:h-[500px] object-cover rounded-xl">
@@ -154,14 +154,14 @@
   </section>
 
   <!-- FOOTER SECTION  -->
-  <footer class="bg-[#121212] text-[#FFFFFF] h-[740px] -mt-50">
-    <div class="flex flex-col md:flex-row justify-between px-4 sm:px-8 lg:px-16 pt-60">
+  <footer class="bg-[#121212] text-[#FFFFFF] h-auto -mt-25 sm:-mt-50">
+    <div class="flex flex-col md:flex-row justify-between px-4 sm:px-8 lg:px-16 pt-30 sm:pt-50">
       <div class="w-[340px] sm:w-[400px] flex flex-col gap-8">
         <img src="assets/Logo.png" alt="" class="w-[50px]">
         <p>Subscribe to our newsletter for the latest updates on features and offerings.</p>
 
         <form action="">
-           <div class="flex flex-col gap-2">
+          <div class="flex flex-col gap-2">
             <label for="email" class="text-sm sm:text-base font-medium text-[#FFFFFF]">Email</label>
             <input type="email" id="email" placeholder="email@gmail.com"
               class="w-full p-3 text-base border border-[#E7E7E7] rounded-lg focus:outline-none focus:ring-2 focus:ring-[#FC9A04]">
@@ -189,6 +189,17 @@
           </ul>
         </div>
 
+      </div>
+
+    </div>
+    <div
+      class="flex flex-col sm:flex-row justify-between items-center border-t border-[#7B310C] px-4 py-8 sm:px-8 lg:px-16 mt-14 gap-4 sm:gap-0">
+      <div class="flex gap-4 sm:gap-6">
+        <p>Privacy Policy</p>
+        <p>Terms of Use</p>
+      </div>
+      <div class="text-center sm:text-right">
+        2025 Baedy. All rights reserved.
       </div>
     </div>
   </footer>
