Add shoutouts section with carousel layout and enhance rewards and celebrate sections for better presentation

--- a/index.html
+++ b/index.html
@@ -6,13 +6,245 @@
   <link rel="icon" type="image/svg+xml" href="/assest/Logo.svg" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
+  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" />
+
+
 
   <title>Baedy</title>
 </head>
 
 <body>
+  <!-- SHOUTOUTS SECTION  -->
+  <section class="p-2 sm:p-8 lg:p-10 text-center">
+    <div class="flex flex-col items-center px-4">
+      <p class="text-base md:text-lg leading-8 text-[#121212] max-w-3xl">Shoutouts</p>
+      <h2
+        class="font-bold text-2xl md:text-3xl lg:text-4xl text-[#121212] max-w-xl mt-2 leading-tight sm:leading-snug lg:leading-normal">
+        Celebrating You, the heart of Every Baedy Moment</h2>
+      <p class="text-base md:text-lg text-[#4F4F4F] max-w-3xl mt-4">At Baedy, every celebration is about people, and we
+        love shining a spotlight on the incredible individuals and milestones that make each event truly special.</p>
+    </div>
+
+    <div class="max-w-full px-4 pt-6">
+      <!-- CAROUSEL LAYOUTS FROM MOBILE  -->
+      <div class="block sm:hidden px-4 my-8">
+    <div class="swiper">
+      <div class="swiper-wrapper">
+        <div class="swiper-slide bg-white rounded-xl w-72 flex-shrink-0">
+          <div class="bg-[#F6F6F6] p-2.5 rounded-xl text-left">
+            <img src="assets/celebrate-img-1.jpg" alt="" class="rounded-xl w-full h-40 object-cover">
+            <p class="pt-2 text-[#6D6D6D]">Celebrant: <span class="font-semibold text-[#3D3D3D]">Michael Joe</span></p>
+          </div>
+          <div class="text-left p-4">
+            <h2 class="text-[#FC9A04] font-semibold">Shoutout Message</h2>
+            <p class="text-[#3D3D3D] text-sm">Happy Birthday to an absolute gem! 💎 May your day be filled with love,
+              laughter, and everything that brings you joy. Here's to another year of greatness! 🥳🎂</p>
+          </div>
+        </div>
+    
+        <!-- CARD 2 -->
+        <div class="swiper-slide bg-white rounded-xl w-72 flex-shrink-0">
+          <div class="bg-[#F6F6F6] p-2.5 rounded-xl text-left">
+            <img src="assets/celebrate-img-1.jpg" alt="" class="rounded-xl w-full h-40 object-cover">
+            <p class="pt-2 text-[#6D6D6D]">Celebrant: <span class="font-semibold text-[#3D3D3D]">Michael Joe</span></p>
+          </div>
+          <div class="text-left p-4">
+            <h2 class="text-[#FC9A04] font-semibold">Shoutout Message</h2>
+            <p class="text-[#3D3D3D] text-sm">Happy Birthday to an absolute gem! 💎 May your day be filled with love,
+              laughter, and everything that brings you joy. Here's to another year of greatness! 🥳🎂</p>
+          </div>
+        </div>
+        <div class="swiper-slide bg-white rounded-xl w-72 flex-shrink-0">
+          <div class="bg-[#F6F6F6] p-2.5 rounded-xl text-left">
+            <img src="assets/celebrate-img-1.jpg" alt="" class="rounded-xl w-full h-40 object-cover">
+            <p class="pt-2 text-[#6D6D6D]">Celebrant: <span class="font-semibold text-[#3D3D3D]">Michael Joe</span></p>
+          </div>
+          <div class="text-left p-4">
+            <h2 class="text-[#FC9A04] font-semibold">Shoutout Message</h2>
+            <p class="text-[#3D3D3D] text-sm">Happy Birthday to an absolute gem! 💎 May your day be filled with love,
+              laughter, and everything that brings you joy. Here's to another year of greatness! 🥳🎂</p>
+          </div>
+        </div>
+        <div class="swiper-slide bg-white rounded-xl w-72 flex-shrink-0">
+          <div class="bg-[#F6F6F6] p-2.5 rounded-xl text-left">
+            <img src="assets/celebrate-img-1.jpg" alt="" class="rounded-xl w-full h-40 object-cover">
+            <p class="pt-2 text-[#6D6D6D]">Celebrant: <span class="font-semibold text-[#3D3D3D]">Michael Joe</span></p>
+          </div>
+          <div class="text-left p-4">
+            <h2 class="text-[#FC9A04] font-semibold">Shoutout Message</h2>
+            <p class="text-[#3D3D3D] text-sm">Happy Birthday to an absolute gem! 💎 May your day be filled with love,
+              laughter, and everything that brings you joy. Here's to another year of greatness! 🥳🎂</p>
+          </div>
+        </div>
+        <div class="swiper-slide bg-white rounded-xl w-72 flex-shrink-0">
+          <div class="bg-[#F6F6F6] p-2.5 rounded-xl text-left">
+            <img src="assets/celebrate-img-1.jpg" alt="" class="rounded-xl w-full h-40 object-cover">
+            <p class="pt-2 text-[#6D6D6D]">Celebrant: <span class="font-semibold text-[#3D3D3D]">Michael Joe</span></p>
+          </div>
+          <div class="text-left p-4">
+            <h2 class="text-[#FC9A04] font-semibold">Shoutout Message</h2>
+            <p class="text-[#3D3D3D] text-sm">Happy Birthday to an absolute gem! 💎 May your day be filled with love,
+              laughter, and everything that brings you joy. Here's to another year of greatness! 🥳🎂</p>
+          </div>
+        </div>
+        <div class="swiper-slide bg-white rounded-xl w-72 flex-shrink-0">
+          <div class="bg-[#F6F6F6] p-2.5 rounded-xl text-left">
+            <img src="assets/celebrate-img-1.jpg" alt="" class="rounded-xl w-full h-40 object-cover">
+            <p class="pt-2 text-[#6D6D6D]">Celebrant: <span class="font-semibold text-[#3D3D3D]">Michael Joe</span></p>
+          </div>
+          <div class="text-left p-4">
+            <h2 class="text-[#FC9A04] font-semibold">Shoutout Message</h2>
+            <p class="text-[#3D3D3D] text-sm">Happy Birthday to an absolute gem! 💎 May your day be filled with love,
+              laughter, and everything that brings you joy. Here's to another year of greatness! 🥳🎂</p>
+          </div>
+        </div>
+        <div class="swiper-slide bg-white rounded-xl w-72 flex-shrink-0">
+          <div class="bg-[#F6F6F6] p-2.5 rounded-xl text-left">
+            <img src="assets/celebrate-img-1.jpg" alt="" class="rounded-xl w-full h-40 object-cover">
+            <p class="pt-2 text-[#6D6D6D]">Celebrant: <span class="font-semibold text-[#3D3D3D]">Michael Joe</span></p>
+          </div>
+          <div class="text-left p-4">
+            <h2 class="text-[#FC9A04] font-semibold">Shoutout Message</h2>
+            <p class="text-[#3D3D3D] text-sm">Happy Birthday to an absolute gem! 💎 May your day be filled with love,
+              laughter, and everything that brings you joy. Here's to another year of greatness! 🥳🎂</p>
+          </div>
+        </div>
+        <div class="swiper-slide bg-white rounded-xl w-72 flex-shrink-0">
+          <div class="bg-[#F6F6F6] p-2.5 rounded-xl text-left">
+            <img src="assets/celebrate-img-1.jpg" alt="" class="rounded-xl w-full h-40 object-cover">
+            <p class="pt-2 text-[#6D6D6D]">Celebrant: <span class="font-semibold text-[#3D3D3D]">Michael Joe</span></p>
+          </div>
+          <div class="text-left p-4">
+            <h2 class="text-[#FC9A04] font-semibold">Shoutout Message</h2>
+            <p class="text-[#3D3D3D] text-sm">Happy Birthday to an absolute gem! 💎 May your day be filled with love,
+              laughter, and everything that brings you joy. Here's to another year of greatness! 🥳🎂</p>
+          </div>
+        </div>
+        <div class="swiper-slide bg-white rounded-xl w-72 flex-shrink-0">
+          <div class="bg-[#F6F6F6] p-2.5 rounded-xl text-left">
+            <img src="assets/celebrate-img-1.jpg" alt="" class="rounded-xl w-full h-40 object-cover">
+            <p class="pt-2 text-[#6D6D6D]">Celebrant: <span class="font-semibold text-[#3D3D3D]">Michael Joe</span></p>
+          </div>
+          <div class="text-left p-4">
+            <h2 class="text-[#FC9A04] font-semibold">Shoutout Message</h2>
+            <p class="text-[#3D3D3D] text-sm">Happy Birthday to an absolute gem! 💎 May your day be filled with love,
+              laughter, and everything that brings you joy. Here's to another year of greatness! 🥳🎂</p>
+          </div>
+        </div>
+
+        
+
+      </div>
+      <!-- Pagination dots -->
+      <!-- <div class="swiper-pagination mt-10"></div> -->
+      <div class="swiper-pagination mt-6"></div>
+
+    <!-- Swiper Navigation Arrows -->
+    <!-- <div class="swiper-button-prev text-xs !text-[#FC9A04] !left-0"></div>
+    <div class="swiper-button-next !text-[#FC9A04] !right-0"></div> -->
+    </div>
+  </div>
+
+  <!-- Grid Layout (Visible from sm and above) -->
+  <div class="hidden sm:grid grid-cols-2 lg:grid-cols-4 gap-4 sm:gap-6 mb-8 px-4">
+    <div class="bg-[#FFFFFF] rounded-xl w-full max-w-xs mx-auto h-auto flex flex-col">
+      <div class="bg-[#F6F6F6] p-2.5 rounded-xl text-left">
+        <img src="assets/celebrate-img-1.jpg" alt="" class="rounded-xl w-full h-40 object-cover">
+        <p class="pt-2 text-[#6D6D6D]">Celebrant: <span class="font-semibold text-[#3D3D3D]">Michael Joe</span></p>
+      </div>
+      <div class="text-left p-4">
+        <h2 class="text-[#FC9A04] font-semibold">Shoutout Message</h2>
+        <p class="text-[#3D3D3D] text-sm">Happy Birthday to an absolute gem! 💎 May your day be filled with love,
+          laughter, and everything that brings you joy. Here's to another year of greatness! 🥳🎂</p>
+      </div>
+    </div>
+    <div class="bg-[#FFFFFF] rounded-xl w-full max-w-xs mx-auto h-auto flex flex-col">
+      <div class="bg-[#F6F6F6] p-2.5 rounded-xl text-left">
+        <img src="assets/celebrate-img-1.jpg" alt="" class="rounded-xl w-full h-40 object-cover">
+        <p class="pt-2 text-[#6D6D6D]">Celebrant: <span class="font-semibold text-[#3D3D3D]">Michael Joe</span></p>
+      </div>
+      <div class="text-left p-4">
+        <h2 class="text-[#FC9A04] font-semibold">Shoutout Message</h2>
+        <p class="text-[#3D3D3D] text-sm">Happy Birthday to an absolute gem! 💎 May your day be filled with love,
+          laughter, and everything that brings you joy. Here's to another year of greatness! 🥳🎂</p>
+      </div>
+    </div>
+    <div class="bg-[#FFFFFF] rounded-xl w-full max-w-xs mx-auto h-auto flex flex-col">
+      <div class="bg-[#F6F6F6] p-2.5 rounded-xl text-left">
+        <img src="assets/celebrate-img-1.jpg" alt="" class="rounded-xl w-full h-40 object-cover">
+        <p class="pt-2 text-[#6D6D6D]">Celebrant: <span class="font-semibold text-[#3D3D3D]">Michael Joe</span></p>
+      </div>
+      <div class="text-left p-4">
+        <h2 class="text-[#FC9A04] font-semibold">Shoutout Message</h2>
+        <p class="text-[#3D3D3D] text-sm">Happy Birthday to an absolute gem! 💎 May your day be filled with love,
+          laughter, and everything that brings you joy. Here's to another year of greatness! 🥳🎂</p>
+      </div>
+    </div>
+    <div class="bg-[#FFFFFF] rounded-xl w-full max-w-xs mx-auto h-auto flex flex-col">
+      <div class="bg-[#F6F6F6] p-2.5 rounded-xl text-left">
+        <img src="assets/celebrate-img-1.jpg" alt="" class="rounded-xl w-full h-40 object-cover">
+        <p class="pt-2 text-[#6D6D6D]">Celebrant: <span class="font-semibold text-[#3D3D3D]">Michael Joe</span></p>
+      </div>
+      <div class="text-left p-4">
+        <h2 class="text-[#FC9A04] font-semibold">Shoutout Message</h2>
+        <p class="text-[#3D3D3D] text-sm">Happy Birthday to an absolute gem! 💎 May your day be filled with love,
+          laughter, and everything that brings you joy. Here's to another year of greatness! 🥳🎂</p>
+      </div>
+    </div>
+    <div class="bg-[#FFFFFF] rounded-xl w-full max-w-xs mx-auto h-auto flex flex-col">
+      <div class="bg-[#F6F6F6] p-2.5 rounded-xl text-left">
+        <img src="assets/celebrate-img-1.jpg" alt="" class="rounded-xl w-full h-40 object-cover">
+        <p class="pt-2 text-[#6D6D6D]">Celebrant: <span class="font-semibold text-[#3D3D3D]">Michael Joe</span></p>
+      </div>
+      <div class="text-left p-4">
+        <h2 class="text-[#FC9A04] font-semibold">Shoutout Message</h2>
+        <p class="text-[#3D3D3D] text-sm">Happy Birthday to an absolute gem! 💎 May your day be filled with love,
+          laughter, and everything that brings you joy. Here's to another year of greatness! 🥳🎂</p>
+      </div>
+    </div>
+    <div class="bg-[#FFFFFF] rounded-xl w-full max-w-xs mx-auto h-auto flex flex-col">
+      <div class="bg-[#F6F6F6] p-2.5 rounded-xl text-left">
+        <img src="assets/celebrate-img-1.jpg" alt="" class="rounded-xl w-full h-40 object-cover">
+        <p class="pt-2 text-[#6D6D6D]">Celebrant: <span class="font-semibold text-[#3D3D3D]">Michael Joe</span></p>
+      </div>
+      <div class="text-left p-4">
+        <h2 class="text-[#FC9A04] font-semibold">Shoutout Message</h2>
+        <p class="text-[#3D3D3D] text-sm">Happy Birthday to an absolute gem! 💎 May your day be filled with love,
+          laughter, and everything that brings you joy. Here's to another year of greatness! 🥳🎂</p>
+      </div>
+    </div>
+    <div class="bg-[#FFFFFF] rounded-xl w-full max-w-xs mx-auto h-auto flex flex-col">
+      <div class="bg-[#F6F6F6] p-2.5 rounded-xl text-left">
+        <img src="assets/celebrate-img-1.jpg" alt="" class="rounded-xl w-full h-40 object-cover">
+        <p class="pt-2 text-[#6D6D6D]">Celebrant: <span class="font-semibold text-[#3D3D3D]">Michael Joe</span></p>
+      </div>
+      <div class="text-left p-4">
+        <h2 class="text-[#FC9A04] font-semibold">Shoutout Message</h2>
+        <p class="text-[#3D3D3D] text-sm">Happy Birthday to an absolute gem! 💎 May your day be filled with love,
+          laughter, and everything that brings you joy. Here's to another year of greatness! 🥳🎂</p>
+      </div>
+    </div>
+    <div class="bg-[#FFFFFF] rounded-xl w-full max-w-xs mx-auto h-auto flex flex-col">
+      <div class="bg-[#F6F6F6] p-2.5 rounded-xl text-left">
+        <img src="assets/celebrate-img-1.jpg" alt="" class="rounded-xl w-full h-40 object-cover">
+        <p class="pt-2 text-[#6D6D6D]">Celebrant: <span class="font-semibold text-[#3D3D3D]">Michael Joe</span></p>
+      </div>
+      <div class="text-left p-4">
+        <h2 class="text-[#FC9A04] font-semibold">Shoutout Message</h2>
+        <p class="text-[#3D3D3D] text-sm">Happy Birthday to an absolute gem! 💎 May your day be filled with love,
+          laughter, and everything that brings you joy. Here's to another year of greatness! 🥳🎂</p>
+      </div>
+    </div>
+
+  </div>
+   <a href="#"
+        class="bg-[#FC9A04] text-[#FFFFFF] text-sm sm:text-base font-semibold rounded-full px-6 py-3 hover:text-white transition">Learn
+        More</a>
+    </div>
+  </section>
   <!-- REWARDS SECTION  -->
-  <section id="rewards" class="my-6 md:my-10 lg:my-15 text-center">
+  <section id="rewards" class="py-6 p-2 sm:p-8 lg:p-10  text-center">
     <div class="flex flex-col items-center px-4">
       <p class="text-base md:text-lg leading-8 text-[#121212] max-w-3xl">Rewards</p>
       <h2
@@ -21,7 +253,7 @@
       <p class="text-base md:text-lg text-[#4F4F4F] max-w-3xl mt-4">Experience the joy of celebrating life's milestones
         with our monthly rewards. From birthdays to anniversaries, we have something special for everyone.</p>
     </div>
-    <div class="max-w-full px-4">
+    <div class="max-w-full px-4 pt-6">
       <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-2 sm:gap-6 mb-8 sm:mb-[67px]">
         <div
           class="w-full max-w-[400px] mx-auto rounded-xl border border-[#E7E7E7] flex flex-col text-center min-h-[400px] sm:min-h-[450px]">
@@ -65,7 +297,7 @@
 
   <!-- CELEBRATE SECTION  -->
 
-  <section id="celebrate" class="py-6 p-2 sm:p-8 lg:p-14">
+  <section id="celebrate" class="py-6 p-2 sm:p-8 lg:p-10 bg-[#FFFFFF]">
     <div class="grid grid-cols-1 md:grid-cols-2 mb-0 sm:mb-[67px] max-w-full px-2 gap-0 sm:gap-5">
       <div class="flex flex-col gap-4 sm:gap-6">
         <p class="text-lg text-[#121212]">Celebrate</p>
@@ -80,7 +312,7 @@
     </div>
 
     <div class="max-w-full px-2">
-      <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-2 sm:gap-6 mb-8 sm:mb-[67px]">
+      <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-2 sm:gap-6 mb-3 sm:mb-5">
         <div
           class="w-full max-w-[400px] mx-auto rounded-xl flex flex-col gap-2 sm:gap-4 min-h-[300px] sm:min-h-[400px]">
           <img src="/assets/celebrate-img-1.jpg" alt="" class="w-full h-[200px] sm:h-[200px] object-cover rounded-xl">
@@ -117,7 +349,7 @@
 
   <!-- CONTACT US SECTION  -->
 
-  <section class="py-6 p-2 sm:p-8 lg:p-14">
+  <section class="py-6 p-2 sm:p-8 lg:p-10 bg-[#FFFFFF]">
     <div
       class="flex flex-col md:flex-row gap-4 sm:gap-8 lg:gap-16 bg-[#F6F6F6] p-4 sm:p-6 lg:p-8 rounded-xl max-w-7xl mx-auto relative z-20">
       <div class="w-full max-w-[500px] h-[440px] sm:max-w-[653px] sm:h-[554px]">
@@ -203,6 +435,9 @@
       </div>
     </div>
   </footer>
+
+  <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
+  <script src="main.js"></script>
 </body>
 
 </html>
