Refactor code structure for improved readability and maintainability

--- a/index.html
+++ b/index.html
@@ -30,13 +30,13 @@
     </div>
 
     <div class="max-w-full px-4 pt-6">
-      <!-- CAROUSEL LAYOUTS FROM MOBILE  -->
+      <!-- CAROUSEL LAYOUTS FOR MOBILE  -->
       <div class="block sm:hidden px-4 my-8">
     <div class="swiper">
       <div class="swiper-wrapper">
         <div class="swiper-slide bg-white rounded-xl w-72 flex-shrink-0">
           <div class="bg-[#F6F6F6] p-2.5 rounded-xl text-left">
-            <img src="assets/celebrate-img-1.jpg" alt="" class="rounded-xl w-full h-40 object-cover">
+            <img src="assets/shoutout-img-1.jpg" alt="" class="rounded-xl w-full h-40 object-cover">
             <p class="pt-2 text-[#6D6D6D]">Celebrant: <span class="font-semibold text-[#3D3D3D]">Michael Joe</span></p>
           </div>
           <div class="text-left p-4">
@@ -49,7 +49,7 @@
         <!-- CARD 2 -->
         <div class="swiper-slide bg-white rounded-xl w-72 flex-shrink-0">
           <div class="bg-[#F6F6F6] p-2.5 rounded-xl text-left">
-            <img src="assets/celebrate-img-1.jpg" alt="" class="rounded-xl w-full h-40 object-cover">
+            <img src="assets/shoutout-img-2.jpg" alt="" class="rounded-xl w-full h-40 object-cover">
             <p class="pt-2 text-[#6D6D6D]">Celebrant: <span class="font-semibold text-[#3D3D3D]">Michael Joe</span></p>
           </div>
           <div class="text-left p-4">
@@ -60,7 +60,7 @@
         </div>
         <div class="swiper-slide bg-white rounded-xl w-72 flex-shrink-0">
           <div class="bg-[#F6F6F6] p-2.5 rounded-xl text-left">
-            <img src="assets/celebrate-img-1.jpg" alt="" class="rounded-xl w-full h-40 object-cover">
+            <img src="assets/shoutout-img-3.jpg" alt="" class="rounded-xl w-full h-40 object-cover">
             <p class="pt-2 text-[#6D6D6D]">Celebrant: <span class="font-semibold text-[#3D3D3D]">Michael Joe</span></p>
           </div>
           <div class="text-left p-4">
@@ -71,7 +71,7 @@
         </div>
         <div class="swiper-slide bg-white rounded-xl w-72 flex-shrink-0">
           <div class="bg-[#F6F6F6] p-2.5 rounded-xl text-left">
-            <img src="assets/celebrate-img-1.jpg" alt="" class="rounded-xl w-full h-40 object-cover">
+            <img src="assets/shoutout-img-4.jpg" alt="" class="rounded-xl w-full h-40 object-cover">
             <p class="pt-2 text-[#6D6D6D]">Celebrant: <span class="font-semibold text-[#3D3D3D]">Michael Joe</span></p>
           </div>
           <div class="text-left p-4">
@@ -82,7 +82,7 @@
         </div>
         <div class="swiper-slide bg-white rounded-xl w-72 flex-shrink-0">
           <div class="bg-[#F6F6F6] p-2.5 rounded-xl text-left">
-            <img src="assets/celebrate-img-1.jpg" alt="" class="rounded-xl w-full h-40 object-cover">
+            <img src="assets/shoutout-img-4.jpg" alt="" class="rounded-xl w-full h-40 object-cover">
             <p class="pt-2 text-[#6D6D6D]">Celebrant: <span class="font-semibold text-[#3D3D3D]">Michael Joe</span></p>
           </div>
           <div class="text-left p-4">
@@ -93,7 +93,7 @@
         </div>
         <div class="swiper-slide bg-white rounded-xl w-72 flex-shrink-0">
           <div class="bg-[#F6F6F6] p-2.5 rounded-xl text-left">
-            <img src="assets/celebrate-img-1.jpg" alt="" class="rounded-xl w-full h-40 object-cover">
+            <img src="assets/shoutout-img-3.jpg" alt="" class="rounded-xl w-full h-40 object-cover">
             <p class="pt-2 text-[#6D6D6D]">Celebrant: <span class="font-semibold text-[#3D3D3D]">Michael Joe</span></p>
           </div>
           <div class="text-left p-4">
@@ -104,7 +104,7 @@
         </div>
         <div class="swiper-slide bg-white rounded-xl w-72 flex-shrink-0">
           <div class="bg-[#F6F6F6] p-2.5 rounded-xl text-left">
-            <img src="assets/celebrate-img-1.jpg" alt="" class="rounded-xl w-full h-40 object-cover">
+            <img src="assets/shoutout-img-2.jpg" alt="" class="rounded-xl w-full h-40 object-cover">
             <p class="pt-2 text-[#6D6D6D]">Celebrant: <span class="font-semibold text-[#3D3D3D]">Michael Joe</span></p>
           </div>
           <div class="text-left p-4">
@@ -115,7 +115,7 @@
         </div>
         <div class="swiper-slide bg-white rounded-xl w-72 flex-shrink-0">
           <div class="bg-[#F6F6F6] p-2.5 rounded-xl text-left">
-            <img src="assets/celebrate-img-1.jpg" alt="" class="rounded-xl w-full h-40 object-cover">
+            <img src="assets/shoutout-img-1.jpg" alt="" class="rounded-xl w-full h-40 object-cover">
             <p class="pt-2 text-[#6D6D6D]">Celebrant: <span class="font-semibold text-[#3D3D3D]">Michael Joe</span></p>
           </div>
           <div class="text-left p-4">
@@ -124,17 +124,7 @@
               laughter, and everything that brings you joy. Here's to another year of greatness! 🥳🎂</p>
           </div>
         </div>
-        <div class="swiper-slide bg-white rounded-xl w-72 flex-shrink-0">
-          <div class="bg-[#F6F6F6] p-2.5 rounded-xl text-left">
-            <img src="assets/celebrate-img-1.jpg" alt="" class="rounded-xl w-full h-40 object-cover">
-            <p class="pt-2 text-[#6D6D6D]">Celebrant: <span class="font-semibold text-[#3D3D3D]">Michael Joe</span></p>
-          </div>
-          <div class="text-left p-4">
-            <h2 class="text-[#FC9A04] font-semibold">Shoutout Message</h2>
-            <p class="text-[#3D3D3D] text-sm">Happy Birthday to an absolute gem! 💎 May your day be filled with love,
-              laughter, and everything that brings you joy. Here's to another year of greatness! 🥳🎂</p>
-          </div>
-        </div>
+        
 
         
 
@@ -153,7 +143,7 @@
   <div class="hidden sm:grid grid-cols-2 lg:grid-cols-4 gap-4 sm:gap-6 mb-8 px-4">
     <div class="bg-[#FFFFFF] rounded-xl w-full max-w-xs mx-auto h-auto flex flex-col">
       <div class="bg-[#F6F6F6] p-2.5 rounded-xl text-left">
-        <img src="assets/celebrate-img-1.jpg" alt="" class="rounded-xl w-full h-40 object-cover">
+        <img src="assets/shoutout-img-1.jpg" alt="" class="rounded-xl w-full h-40 object-cover">
         <p class="pt-2 text-[#6D6D6D]">Celebrant: <span class="font-semibold text-[#3D3D3D]">Michael Joe</span></p>
       </div>
       <div class="text-left p-4">
@@ -164,7 +154,7 @@
     </div>
     <div class="bg-[#FFFFFF] rounded-xl w-full max-w-xs mx-auto h-auto flex flex-col">
       <div class="bg-[#F6F6F6] p-2.5 rounded-xl text-left">
-        <img src="assets/celebrate-img-1.jpg" alt="" class="rounded-xl w-full h-40 object-cover">
+        <img src="assets/shoutout-img-2.jpg" alt="" class="rounded-xl w-full h-40 object-cover">
         <p class="pt-2 text-[#6D6D6D]">Celebrant: <span class="font-semibold text-[#3D3D3D]">Michael Joe</span></p>
       </div>
       <div class="text-left p-4">
@@ -175,7 +165,7 @@
     </div>
     <div class="bg-[#FFFFFF] rounded-xl w-full max-w-xs mx-auto h-auto flex flex-col">
       <div class="bg-[#F6F6F6] p-2.5 rounded-xl text-left">
-        <img src="assets/celebrate-img-1.jpg" alt="" class="rounded-xl w-full h-40 object-cover">
+        <img src="assets/shoutout-img-3.jpg" alt="" class="rounded-xl w-full h-40 object-cover">
         <p class="pt-2 text-[#6D6D6D]">Celebrant: <span class="font-semibold text-[#3D3D3D]">Michael Joe</span></p>
       </div>
       <div class="text-left p-4">
@@ -186,7 +176,7 @@
     </div>
     <div class="bg-[#FFFFFF] rounded-xl w-full max-w-xs mx-auto h-auto flex flex-col">
       <div class="bg-[#F6F6F6] p-2.5 rounded-xl text-left">
-        <img src="assets/celebrate-img-1.jpg" alt="" class="rounded-xl w-full h-40 object-cover">
+        <img src="assets/shoutout-img-4.jpg" alt="" class="rounded-xl w-full h-40 object-cover">
         <p class="pt-2 text-[#6D6D6D]">Celebrant: <span class="font-semibold text-[#3D3D3D]">Michael Joe</span></p>
       </div>
       <div class="text-left p-4">
@@ -197,7 +187,7 @@
     </div>
     <div class="bg-[#FFFFFF] rounded-xl w-full max-w-xs mx-auto h-auto flex flex-col">
       <div class="bg-[#F6F6F6] p-2.5 rounded-xl text-left">
-        <img src="assets/celebrate-img-1.jpg" alt="" class="rounded-xl w-full h-40 object-cover">
+        <img src="assets/shoutout-img-4.jpg" alt="" class="rounded-xl w-full h-40 object-cover">
         <p class="pt-2 text-[#6D6D6D]">Celebrant: <span class="font-semibold text-[#3D3D3D]">Michael Joe</span></p>
       </div>
       <div class="text-left p-4">
@@ -208,7 +198,7 @@
     </div>
     <div class="bg-[#FFFFFF] rounded-xl w-full max-w-xs mx-auto h-auto flex flex-col">
       <div class="bg-[#F6F6F6] p-2.5 rounded-xl text-left">
-        <img src="assets/celebrate-img-1.jpg" alt="" class="rounded-xl w-full h-40 object-cover">
+        <img src="assets/shoutout-img-3.jpg" alt="" class="rounded-xl w-full h-40 object-cover">
         <p class="pt-2 text-[#6D6D6D]">Celebrant: <span class="font-semibold text-[#3D3D3D]">Michael Joe</span></p>
       </div>
       <div class="text-left p-4">
@@ -219,7 +209,7 @@
     </div>
     <div class="bg-[#FFFFFF] rounded-xl w-full max-w-xs mx-auto h-auto flex flex-col">
       <div class="bg-[#F6F6F6] p-2.5 rounded-xl text-left">
-        <img src="assets/celebrate-img-1.jpg" alt="" class="rounded-xl w-full h-40 object-cover">
+        <img src="assets/shoutout-img-2.jpg" alt="" class="rounded-xl w-full h-40 object-cover">
         <p class="pt-2 text-[#6D6D6D]">Celebrant: <span class="font-semibold text-[#3D3D3D]">Michael Joe</span></p>
       </div>
       <div class="text-left p-4">
@@ -230,7 +220,7 @@
     </div>
     <div class="bg-[#FFFFFF] rounded-xl w-full max-w-xs mx-auto h-auto flex flex-col">
       <div class="bg-[#F6F6F6] p-2.5 rounded-xl text-left">
-        <img src="assets/celebrate-img-1.jpg" alt="" class="rounded-xl w-full h-40 object-cover">
+        <img src="assets/shoutout-img-1.jpg" alt="" class="rounded-xl w-full h-40 object-cover">
         <p class="pt-2 text-[#6D6D6D]">Celebrant: <span class="font-semibold text-[#3D3D3D]">Michael Joe</span></p>
       </div>
       <div class="text-left p-4">
